# stash

./: Cargo.toml  Dockerfile  README.md
stash/: Cargo.toml  diesel.toml
stash-cli/: Cargo.toml
stash-cli/src/: cli.rs  config.rs  lib.rs
stash-client/: Cargo.toml
stash-client/src/: cli.rs  config.rs  lib.rs
stash-daemon/: Cargo.toml
stash-daemon/migrations/2025-07-31-102509_initial/: down.sql  up.sql
stash-daemon/src/: auth.rs  config.rs  main.rs
stash/migrations/: 202507311050_initial.sql
stash/migrations/2025-07-30-065339_initial/: down.sql  up.sql
stash/src/: client.rs  common.rs  db.rs  error.rs  lib.rs  schema.rs  server.rs  sha256.rs
stash/src/db/: file.rs  file_content.rs  file_tag.rs  tag.rs
stash/tests/: auth.rs  blobs.rs  files.rs  tags.rs  util.rs
