[package]
name = "stash-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
envconfig = "0.11.0"
iroh = "0.91.0"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
] }
stash = { path = "../stash" }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
