[package]
name = "stash-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
envconfig = "0.11.0"
gatekeeper = { git = "https://github.com/ralphmorton/gatekeeper.git" }
iroh = "0.91.0"
stash = { path = "../stash" }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
