[package]
name = "stash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
data-encoding = "2.9.0"
iroh = "0.91.0"
rand = "0.8.5"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"

[dev-dependencies]
tempfile = "3.20.0"
